--- a/login/templates/login/login_temp.html
+++ b/login/templates/login/login_temp.html
@@ -19,14 +19,14 @@
                     <h1 style="text-align:center;" class="display-4">Welcome to the Shopping List</h1>
                     <p style="text-align:center;" class="lead">Implementing CRUD using Django</p>
                     <hr>
-                    <h2 style="text-align:center;">Register yourself</h2>
+                    <h2 style="text-align:center;">Login</h2>
                     {%block content%}
                     <div align="center">
                         To continue
                         <a href="http://127.0.0.1:8000/shop/views/" class="btn btn-primary">Click here</a>
                     </div>
                     <div align="center">
-                        <form action="signup" method="POST">
+                        <form action="login" method="POST">
                             {%csrf_token%}
 
                             <div class="form-group row">
@@ -35,24 +35,7 @@
                                     <input type="text" placeholder="Username" name="username">
                                 </div>
                             </div>
-                            <div class="form-group row">
-                                <label for="inputFirstName" class="col-sm-2 col-form-label">First Name</label>
-                                <div class="col-sm-5">
-                                    <input type="text" placeholder="First Name" name="first_name">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="inputLastName" class="col-sm-2 col-form-label">Last Name</label>
-                                <div class="col-sm-5">
-                                    <input type="text" placeholder="Last Name" name="last_name">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                                <div class="col-sm-5">
-                                    <input type="email" name="email_id" placeholder="Email">
-                                </div>
-                            </div>
+
                             <div class="form-group row">
                                 <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
                                 <div class="col-sm-5">
