--- a/login/templates/login/login_temp.html
+++ b/login/templates/login/login_temp.html
@@ -46,7 +46,7 @@
 
                             <div class="form-group row">
                                 <div class="col-sm-10">
-                                    <button type="submit" class="btn btn-primary">Sign in</button>
+                                    <button type="submit" class="btn btn-primary">Login</button>
                                 </div>
                             </div>
                         </form>
