--- a/login/templates/login/login_temp.html
+++ b/login/templates/login/login_temp.html
@@ -21,28 +21,20 @@
                     <hr>
                     <h2 style="text-align:center;">Login</h2>
                     {%block content%}
-                    <div align="center">
-                        To continue
-                        <a href="http://127.0.0.1:8000/shop/views/" class="btn btn-primary">Click here</a>
-                    </div>
+
                     <div align="center">
                         <form action="login" method="POST">
                             {%csrf_token%}
 
-                            <div class="form-group row">
-                                <label for="inputUsername" class="col-sm-2 col-form-label">User Name</label>
-                                <div class="col-sm-5">
-                                    <input type="text" placeholder="Username" name="username">
-                                </div>
-                            </div>
 
-                            <div class="form-group row">
-                                <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-                                <div class="col-sm-5">
-                                    <input type="password" name="password" placeholder="Password">
-                                </div>
-                            </div>
+                            <input type="text" placeholder="Username" name="username">
 
+                            <br><br>
+
+
+                            <input type="password" name="password" placeholder="password">
+
+                            <br><br>
 
                             <div class="form-group row">
                                 <div class="col-sm-10">
