--- a/signup/templates/signup/signup_temp.html
+++ b/signup/templates/signup/signup_temp.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+    <style>
+        form {
+            width: 1000px;
+            margin: 0 auto;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,60 +21,57 @@
     <div class="container">
         <div class="col-md-10 offset-md-1 mt-5">
             <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                    <h1 style="text-align:center;" class="display-4">Welcome to the Shopping List</h1>
-                    <p style="text-align:center;" class="lead">Implementing CRUD using Django</p>
+                <div align="center" class="container">
+                    <h1 style="text-align:center;" class="display-4">Welcome to the Sign Up page</h1>
+                    <!-- <p style="text-align:center;" class="lead">Implementing CRUD using Django</p> -->
                     <hr>
                     <h2 style="text-align:center;">Register yourself</h2>
-                    {%block content%}
-                    <div align="center">
-                        To continue
-                        <a href="http://127.0.0.1:8000/shop/views/" class="btn btn-primary">Click here</a>
-                    </div>
-                    <div align="center">
-                        <form action="signup" method="POST">
-                            {%csrf_token%}
-
-                            <div class="form-group row">
-                                <label for="inputUsername" class="col-sm-2 col-form-label">User Name</label>
-                                <div class="col-sm-5">
-                                    <input type="text" placeholder="Username" name="username">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="inputFirstName" class="col-sm-2 col-form-label">First Name</label>
-                                <div class="col-sm-5">
-                                    <input type="text" placeholder="First Name" name="first_name">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="inputLastName" class="col-sm-2 col-form-label">Last Name</label>
-                                <div class="col-sm-5">
-                                    <input type="text" placeholder="Last Name" name="last_name">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                                <div class="col-sm-5">
-                                    <input type="email" name="email_id" placeholder="Email">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-                                <div class="col-sm-5">
-                                    <input type="password" name="password" placeholder="Password">
-                                </div>
-                            </div>
+                    <br> {%block content%}
 
 
-                            <div class="form-group row">
-                                <div class="col-sm-10">
-                                    <button type="submit" class="btn btn-primary">Sign in</button>
-                                </div>
-                            </div>
-                        </form>
+                    <form align="center" action="signup" method="POST">
+                        {%csrf_token%}
 
-                    </div>
+                        <div class="form-group row">
+                            <!-- <label for="inputUsername" class="col-sm-2 col-form-label">User Name</label> -->
+                            <div>
+                                <input type="text" class="form-control" placeholder="Username" name="username">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <!-- <label for="inputFirstName" class="col-sm-2 col-form-label">First Name</label> -->
+                            <div>
+                                <input type="text" class="form-control" placeholder="First Name" name="first_name">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <!-- <label for="inputLastName" class="col-sm-2 col-form-label">Last Name</label> -->
+                            <div>
+                                <input type="text" class="form-control" placeholder="Last Name" name="last_name">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <!-- <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label> -->
+                            <div>
+                                <input type="email" class="form-control" name="email_id" placeholder="Email">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <!-- <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label> -->
+                            <div>
+                                <input type="password" class="form-control" name="password" placeholder="Password">
+                            </div>
+                        </div>
+
+
+                        <div class="form-group row">
+                            <div class="col-sm-10">
+                                <button type="submit" class="btn btn-primary">Sign in</button>
+                            </div>
+                        </div>
+                    </form>
+
+
 
 
                     {%endblock%}
